fix: change settings, add favicon

--- a/news-api/package.json
+++ b/news-api/package.json
@@ -13,7 +13,7 @@
         "url": ""
     },
     "keywords": [],
-    "author": "Aleh Serhiyenia",
+    "author": "slysnek",
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
